--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,7 @@
         <label for="timeElapsedInput">Time (HH:MM:SS)</label><br>
         <input type="text" id="timeElapsedInput" name="timeElapsedInput"><br><br>
         
-        <input type="submit" value="Submit">
+        <button id="addRun">Submit Run</button>
     </form>
 </body>
 <script src="/static/script.js"></script>
