added functionality that displays all runs

--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,18 @@
         
         <button id="addRun">Submit Run</button>
     </form>
+    <table id="runTable">
+        <thead>
+            <tr>
+                <th>Title</th>
+                <th>Number of Miles</th>
+                <th>Time Elapsed</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!--Table rows will be dynamically added using JavaScript-->
+        </tbody>
+    </table>
 </body>
 <script src="/static/script.js"></script>
 </html>
