added css styling

--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <h1>Running Log</h1>
-    <a href="/static/newlog.html">LOG A NEW RUN</a>
+    <div id="logNewRunContainer">
+        <a id="logNewRun" href="/static/newlog.html">LOG A NEW RUN</a>
+    </div>
     <table id="runTable">
         <thead>
             <tr>
